# codr

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TUI_REWORK_COMPLETE.md  TUI_REWORK_PLAN.md  clippy.toml  dups.toml  rustfmt.toml  test.txt
.github/workflows/: code-quality.yml  test-coverage.yml
docs/: improvement-spec.md  json-tool-calling-migration.md
scripts/: README.md  check-dead-code.sh  check-duplicate-code.sh  check-large-files.sh  check-todos.sh  coverage.sh  install-hooks.sh  test-coverage.sh  test-with-timing.sh
src/: commands.rs  config.rs  context_manager.rs  conversation.rs  error.rs  fuzzy.rs  lib.rs  logo.rs  main.rs  model.rs  model_probe.rs  model_registry.rs  parser.rs  prompt.rs  tests.rs  tui.rs  tui_components.rs  tui_legacy.rs
src/agent/: executor.rs  loop_.rs  mod.rs  tui_executor.rs  updates.rs
src/tests/: config_tests.rs  error_tests.rs  parser_tests.rs  tools_tests.rs
src/tools/: async_handler.rs  async_wrapper.rs  context.rs  dynamic.rs  impl.rs  mod.rs  params.rs  schema.rs
src/tui/: events.rs  markdown.rs  mod.rs  theme.rs
src/tui/widgets/: banner.rs  conversation.rs  input.rs  mod.rs  status.rs
tests/: integration_test.rs
