[package]
name = "codr"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
toml = "0.8"
dirs = "5.0"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
ignore = "0.4"
glob = "0.3"
thiserror = "2.0"
dunce = "1.0"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
once_cell = "1.19"
tokio-util = "0.7"
clipboard = "0.5"
clap = { version = "4.5", features = ["derive"] }
