[package]
name = "codr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "codr"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
regex = "1.0"
toml = "0.8"
dirs = "5.0"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
ignore = "0.4"
glob = "0.3"
thiserror = "2.0"
schemars = "0.8"
dunce = "1.0"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
once_cell = "1.19"
tokio-util = "0.7"
clipboard = "0.5"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
