[package]
name = "codr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "codr"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
regex = "1.0"
toml = "0.8"
dirs = "5.0"
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
textwrap = "0.16"
pulldown-cmark = { version = "0.13.1", features = ["simd"] }
ignore = "0.4"
glob = "0.3"
thiserror = "2.0"
schemars = "0.8"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
once_cell = "1.19"
tokio-util = "0.7"
clipboard = "0.5"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"

# Coverage tooling
# Install with: cargo install cargo-tarpaulin
# Run coverage with: cargo tarpaulin --out Xml --fail-under 50

# Test configuration
[profile.dev]
opt-level = 0  # Use opt-level 0 for faster compilation during development

[profile.test]
opt-level = 0  # Use opt-level 0 for faster test compilation
# Tests run in parallel by default (threads = num_cpus)
# To run tests serially, use: cargo test -- --test-threads=1

# Environment variables for test performance tracking
[env]
CARGO_TERM_COLOR = "always"  # Enable colored output for better readability
# Test execution time is displayed by Rust's test harness
# To see detailed timing: cargo test -- --nocapture -- --test-threads=1
